--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@chakra-ui/react": "^3.0.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.11.11",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
