--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fake-server":"json-server --watch db.json --port 3001"
+
   },
   "dependencies": {
     "@chakra-ui/react": "^3.0.2",
