fix: update env urls and refactor some codes

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_APP_ENV=production
-NEXT_PUBLIC_API_URL=https://my-json-server.typicode.com/alaa-mohamad/jsonDB
+NEXT_PUBLIC_API_URL=https://sitev2.arabcodeacademy.com/wp-json/aca/v1
