--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query": "^5.62.15",
     "framer-motion": "^11.11.11",
     "next": "14.2.21",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.14.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
@@ -27,7 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
