--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "framer-motion": "^11.11.11",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
